--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,12 @@
 [tox]
 envlist = py36,py37,py38,pypy3,memorytest38,doctest38,coverage-py38
 
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+
 [testenv]
 commands = python {toxinidir}/setup.py test
 
